// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core / ModuleMetadata / In export default with decorator Story 1 1`] = `
<storybook-wrapper>
  <storybook-simple-token-component
    ng-reflect-name="Prop Name"
  >
    <h3>
      Prop Name
    </h3>
    <p>
      Items:
    </p>
    <ul>
      
      <li>
        Joe
      </li>
      <li>
        Jane
      </li>
    </ul>
  </storybook-simple-token-component>
</storybook-wrapper>
`;

exports[`Storyshots Core / ModuleMetadata / In export default with decorator Story 2 1`] = `
<storybook-wrapper>
  <storybook-simple-token-component>
    <h3>
      Provider Name
    </h3>
    <p>
      Items:
    </p>
    <ul>
      
      <li>
        Joe
      </li>
      <li>
        Jane
      </li>
    </ul>
  </storybook-simple-token-component>
</storybook-wrapper>
`;
